<resources>
    <string name="app_name" translatable="false">Jobka</string>

    <!-- Headline texts. -->
    <string name="search_headline">Поиск вакансий</string>
    <string name="filter_headline">Настройки фильтрации</string>
    <string name="place_of_work_headline">Выбор места работы</string>
    <string name="country_headline">Выбор страны</string>
    <string name="region_headline">Выбор региона</string>
    <string name="industry_headline">Выбор отрасли</string>
    <string name="vacancy_headline">Вакансия</string>
    <string name="favourite_headline">Избранное</string>
    <string name="team_headline">Команда</string>
    <string name="main_headline_bottom_menu">Главная</string>

    <!-- Error texts. -->
    <string name="no_internet_error">Нет интернета</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="vacancy_error">Вакансия не найдена или удалена</string>
    <string name="vacancy_list_error">Не удалось получить список вакансий</string>
    <string name="list_error">Не удалось получить список</string>

    <!-- Empty texts. -->
    <string name="region_list_empty_error">Такого региона нет</string>
    <string name="list_empty">Список пуст</string>

    <!-- Search texts. -->
    <string name="enter_request_hint">Введите запрос</string>
    <string name="vacancy_list_empty_label">Таких вакансий нет</string>

    <!-- Filter texts. -->
    <string name="place_of_work_hint">Место работы</string>
    <string name="country_hint">Страна</string>
    <string name="region_hint">Регион</string>
    <string name="enter_region_hint">Введите регион</string>
    <string name="industry_hint">Отрасль</string>
    <string name="enter_industry_hint">Введите отрасль</string>
    <string name="salary_label">Ожидаемая зарплата</string>
    <string name="enter_amount_hint">Введите сумму</string>
    <string name="hide_without_salary_switch_text">Не показывать без зарплаты</string>
    <string name="choose_button_label">Выбрать</string>
    <string name="reset_button_label">Сбросить</string>

    <!-- Vacancy title texts. -->
    <string name="experience_vacancy_title">Требуемый опыт</string>
    <string name="description_vacancy_title">Описание вакансии</string>
    <string name="responsibilities_vacancy_title">Обязанности</string>
    <string name="requirements_vacancy_title">Требования</string>
    <string name="conditions_vacancy_title">Условия</string>
    <string name="skills_vacancy_title">Ключевые навыки</string>

    <!-- Team texts. -->
    <string name="developers">Над приложением работали</string>
    <string name="alexey_usevich">Усевич Алексей Разработчик</string>
    <string name="olesya_dubentseva">Дубенцева Олеся Тимлид</string>
    <string name="anton_iushin">Юшин Антон Разработчик</string>
    <string name="vyacheslav_verman">Верман Вячеслав Разработчик</string>

    <plurals name="vacancyCount">
        <item quantity="one">%1$d vacancy was found</item>
        <item quantity="other">%1$d vacancies were found</item>
    </plurals>

    <!-- Экран "Детали вакансии" -->
    <string name="vacancy_title_android_developers">Android-разработчик</string>
    <string name="salary_range">от 100 000 ₽</string>
    <string name="company_name">Еда</string>
    <string name="city">Москва</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="experience">От 1 года до 3 лет</string>
    <string name="type_of_employment">Полная занятость, Удаленная работа</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="responsibilities_value">•  Разрабатывать новую функциональность приложения\n•  Помогать с интеграцией нашего SDK в другие приложения\n•  Проектировать большие новые модули\n•  Писать UI- и unit-тесты\n•  Следить за работоспособностью сервиса и устранять технический долг</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="key_kills_description">•  Знание классических алгоритмов и структуры данных\n•  Программирование для Android больше одного года\n•  Знание WebRTC</string>
    <string name="contact">Контакты</string>
    <string name="contact_person">Контактное лицо</string>
    <string name="contact_person_value">Ирина</string>
    <string name="contact_email">E-mail</string>
    <string name="email_value">i.lozgkina@yandex.ru</string>
    <string name="contact_phone">Телефон</string>
    <string name="phone_value">+7 (904) 329-27-71</string>
    <string name="comment">Комментарий</string>
    <string name="contact_comment_value">Заполнить анкету по форме можно на нашем сайте</string>







    <!-- Для strings/ru на будущее. -->
    <!--    <plurals name="vacancyCount">-->
    <!--        <item quantity="one">Найдена %1$d вакансия</item>-->
    <!--        <item quantity="few">Найдено %1$d вакансии</item>-->
    <!--        <item quantity="many">Найдено %1$d вакансий</item>-->
    <!--        <item quantity="other">Найдено %1$d вакансий</item>-->
    <!--    </plurals>-->
</resources>
