<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".team.ui.TeamFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_team"
        style="@style/ToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/team_headline" />

    <TextView
        android:id="@+id/developers"
        style="@style/TeamBigTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/developers" />

    <TextView
        style="@style/TeamNormalTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/olesya_dubentseva" />

    <TextView
        style="@style/TeamNormalTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/vyacheslav_verman" />

    <TextView
        style="@style/TeamNormalTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/alexey_usevich" />

    <TextView
        style="@style/TeamNormalTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/anton_iushin" />
</LinearLayout>
